[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-downloader"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

[tool.ruff.lint.isort]
force-single-line = true
